# Store-Sales

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.py  pyproject.toml  requirements.in  requirements.txt
data_exploration_app/: descr.py  explore_app_config.py  main.py  utils.py
data_exploration_app/dataset_utils/: holidays.py
deployment/: .dockerignore  Dockerfile  constants.py  requirements.in  requirements.txt
deployment/models/: family_store_to_model.csv
deployment/sales_api/: api_utils.py  model_api.py
deployment/sales_predictor/: models.py  sales_predictor.py
deployment/storesales/: api_utils.py  model_api.py  sales_predictor.py
notebooks/: combine_submission.ipynb
notebooks/explore/: advanced_predictor.ipynb  external_data_explore.ipynb  lightgbm_high_loss_families.ipynb
notebooks/light_gbm/: darts_draft.ipynb  darts_light_gbm_implementation.ipynb  data_processing_draft.ipynb  draft_tsfresh_vs_light_gbm.ipynb
scripts/: generate_sales_plots_as_pdf.py
scripts/deployment/: deployment_config.py  deployment_setup.py
storesales/: advanced_predictor.py  constants.py  feature_engineering.py  loss.py  preprocessing.py  utils.py
storesales/baseline/: constants.py  explore_utils.py  model_wrappers.py  param_suggestions.py  sales_predictor.py  stat_models.py  utils.py
storesales/deployment/: baseline.py  deployment_config.py  light_gbm.py  setup_script.py  utils.py
storesales/explore/: utils.py
storesales/light_gbm/: constants.py  data_loader.py  dataset.py  loss.py  param_dataclasses.py  preprocessing.py  utils.py  (+1 more)
(+21 files in other folders)
